# conan-recipes

./: CHANGELOG.rst  CONTRIBUTING.rst  README.rst
RingDecomposerLib/: conanfile.py
artifactory-scripts/: artifactory_api.py  delete-old-pkgs.py  rehost.py
cereal/: conanfile.py
hdf5/: CMakeLists.txt  conanfile.py
hdf5/patches/: config.patch  filters.patch
irc/: CMakeLists.txt  conanfile.py
mongo-c-driver/: CMakeLists.txt  conanfile.py  ssl-targets.patch
mongo-cxx-driver/: conanfile.py  link_dl.patch
nauty/: CMakeLists.txt  conanfile.py  config.cmake.in
pybind11/: conanfile.py
serenity/: conanfile.py  serenity.patch
xtb/: CMakeLists.txt  conanfile.py  portable-linalg.patch
yaml-cpp/: conanfile.py
